1998-05-12  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* readline.c: Improvements for readline support: Handle errors
	better; Implement before-read-hook.

1998-05-11  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* init.c (scm_boot_guile_1), readline.c: Test for
	HAVE_RL_GETC_FUNCTION instead of HAVE_LIBREADLINE.  (Need to
	assure that we have version >= 2.1.)

1998-05-11  Mikael Djurfeldt  <mdj@kenneth>

	* readline.c (scm_add_history): Bugfix: Do strdup before giving
	away the string to add_history.
	(completion_function): Do completion for readline. (Thanks to
	Andrew Archibald.)
	(scm_filename_completion_function): New procedure: Filename
	completer.
	(current_input_getc): New function.  Use this one instead of
	standard getc from readline.

	* throw.c, throw.h (scm_handle_by_throw): New function: This
	handler throws errors to next handler on the dynwind chain.

1998-05-09  Mikael Djurfeldt  <mdj@kenneth>

	* scmsigs.c (scm_usleep): Bugfix: Don't define j if it isn't
	used.

1998-05-03  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* procprop.c (scm_i_procedure_arity): New function.  Returns arity
	of procedure.
	(scm_procedure_properties): Modified to return arity together with
	other properties.
	(scm_procedure_property): Added the read-only property `arity'.
	(scm_set_procedure_property_x): It is an error to set the `arity'
	property.

	* gsubr.h, gsubr.c: Moved macros from gsubr.c to gsubr.h and added
	prefix SCM_; Made f_gsubr_apply global and added prefix scm_.

	* procprop.h (scm_sym_arity): New symbol.

	* objects.c (scm_set_object_procedure_x): New procedure: Use this
	to set the dispatch procedure of an operator or entity object.

	* objects.h (SCM_METACLASS_OPERATOR_LAYOUT, SCM_ENTITY_LAYOUT):
	Made procedure slots read-only.

	* eval.c (SCM_CEVAL): Moved scm_tc7_contin case above
	scm_tcs_cons_gloc case in zero args switch; Fixed args
	construction for operators in scm_tcs_cons_gloc case in two args
	switch.
